--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               Sign in
             </button>
           </div>
-          <img src="img/register.png" class="image" alt="" />
+          <img src="img/reg.png" class="image" alt="" />
         </div>
       </div>
     </div>
