--- a/index.html
+++ b/index.html
@@ -106,6 +106,38 @@
         </div>
       </div>
     </div>
+    <div class="footer">
+
+    <div class="box-container">
+
+        <div class="box">
+            <h3>Branch locations</h3>
+            <a href="#">New Delhi</a>
+            <a href="#">Karnataka</a>
+            
+        </div>
+
+        <div class="box">
+            <h3>Quick Links</h3>
+            <a href="https://aim.gov.in/overview.php">About AIM</a>
+            <a href="https://aim.gov.in/press-releases.php">Press Release</a>
+            
+            <a href="file:///C:/Users/sanch/OneDrive/Desktop/Files-Desktop/html%20coding/Niti%20Aayog/lms/education%20website%20design/index.html#">Work With AIM</a>
+            <a href="https://aim.gov.in/contact.php">contact Us</a>
+        </div>
+
+        <div class="box">
+            <h3>Contact Info</h3>
+            <p> <i class="fas fa-map-marker-alt"></i> New Delhi, india 400104. </p>
+            <p> <i class="fas fa-envelope"></i> example@gmail.com </p>
+            <p> <i class="fas fa-phone"></i> +123-456-7890 </p>
+        </div>
+
+    </div>
+
+    <h1 class="credit">created by <a href="#">Ahana Pal.</a> All rights reserved. Copyright © AIM 2021 </h1>
+
+</div>
 
     <script src="app.js"></script>
   </body>
