--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
       </div>
     </div>
-    <div class="footer">
+    <!--<div class="footer">
 
     <div class="box-container">
 
@@ -137,7 +137,7 @@
 
     <h1 class="credit">created by <a href="#">Ahana Pal.</a> All rights reserved. Copyright © AIM 2021 </h1>
 
-</div>
+</div>-->
 
     <script src="app.js"></script>
   </body>
