--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
           <div class="content">
             <h3>New here ?</h3>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis,
-              ex ratione. Aliquid!
+              Lantern aims to connect a global community of 15 million rural entrepreneurs and investors through the power of community. <br> Come join us!
             </p>
             <button class="btn transparent" id="sign-up-btn">
               Sign up
@@ -95,8 +94,8 @@
           <div class="content">
             <h3>One of us ?</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-              laboriosam ad deleniti.
+              Lantern aims to connect a global community of 15 million rural entrepreneurs and investors through the power of community. 
+              Thank you for a being a part of us!
             </p>
             <button class="btn transparent" id="sign-in-btn">
               Sign in
